--- a/src/app/ui/components/filter/filter.component.html
+++ b/src/app/ui/components/filter/filter.component.html
@@ -11,7 +11,7 @@
               <input type="checkbox" 
                      [checked]="isSelected(filter.key, option.value)"
                      (change)="toggleFilter(filter.key, option.value)">
-              <span class="checkbox-text">{{ option.value }}</span>
+              <span class="checkbox-text">{{ option.displayValue }}</span>
             </label>
           </div>
         </ng-container>
@@ -22,7 +22,9 @@
               <input type="number" [(ngModel)]="customPriceRange.min" placeholder="En az" class="price-input">
               <input type="number" [(ngModel)]="customPriceRange.max" placeholder="En çok" class="price-input">
               <button (click)="applyCustomPriceRange()" class="apply-button">
-                <svg _ngcontent-ng-c1535584232="" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" class="bi bi-search"><path _ngcontent-ng-c1535584232="" d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"></path></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" class="bi bi-search">
+                  <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                </svg>
               </button>
             </div>
             <div class="predefined-ranges scrollable">
@@ -31,7 +33,7 @@
                        [checked]="isSelected(filter.key, option.value)"
                        (change)="toggleFilter(filter.key, option.value)"
                        [name]="filter.key">
-                <span class="checkbox-text">{{ option.value }}</span>
+                <span class="checkbox-text">{{ option.displayValue }}</span>
               </label>
             </div>
           </div>
