--- a/src/app/ui/components/footer/footer.component.html
+++ b/src/app/ui/components/footer/footer.component.html
@@ -26,10 +26,10 @@
       <div class="col-lg-2 col-md-6">
         <h5 class="mb-3">Quick Links</h5>
         <ul class="list-unstyled">
-          <li><a href="/about-us" class="text-decoration-none mb-2 d-block">About Us</a></li>
-          <li><a href="/brands-page" class="text-decoration-none mb-2 d-block">Brands</a></li>
-          <li><a href="/categories-page" class="text-decoration-none mb-2 d-block">Categories</a></li>
-          <li><a href="/contact" class="text-decoration-none mb-2 d-block">Contact</a></li>
+          <li><a [routerLink]="['/about-us']" class="text-decoration-none mb-2 d-block">About Us</a></li>
+          <li><a [routerLink]="['/brand']" class="text-decoration-none mb-2 d-block">Brands</a></li>
+          <li><a [routerLink]="['categories-page']" class="text-decoration-none mb-2 d-block">Categories</a></li>
+          <li><a [routerLink]="['/contact']" class="text-decoration-none mb-2 d-block">Contact</a></li>
         </ul>
       </div>
 
@@ -37,9 +37,9 @@
       <div class="col-lg-3 col-md-6">
         <h5 class="mb-3">Customer Service</h5>
         <ul class="list-unstyled">
-          <li><a href="/faq" class="text-decoration-none mb-2 d-block">FAQ</a></li>
-          <li><a href="/shipping" class="text-decoration-none mb-2 d-block">Shipping Information</a></li>
-          <li><a href="/privacy" class="text-decoration-none mb-2 d-block">Privacy Policy</a></li>
+          <li><a [routerLink]="['/faq']" class="text-decoration-none mb-2 d-block">FAQ</a></li>
+          <li><a [routerLink]="['/shipping']" class="text-decoration-none mb-2 d-block">Shipping Information</a></li>
+          <li><a [routerLink]="['/privacy']" class="text-decoration-none mb-2 d-block">Privacy Policy</a></li>
         </ul>
       </div>
 
